# main_NAV_ws

./: .gitignore  README.md  frames.gv
src/artag/ar_tag_toolbox/launch/: ar_track_cam.launch
src/controller_motors/: CMakeLists.txt  package.xml
src/controller_motors/include/ethercatcpp/: epos4.h  master.h
src/controller_motors/msg/: WheelVelocity.msg
src/controller_motors/src/: controller_motors.cpp  controller_motors_subscriber.cpp  controller_motors_test.cpp  epos4_example.cpp
src/kalman/: CMakeLists.txt  Topic vitesse des roues  listen.py  package.xml  pose_to_file.py  test.py  testing.txt
src/kalman/config/: ekf_localization.yaml
src/kalman/launch/: start_ekf_localization.launch
src/kalman/src/: noisy_pose.py  noisy_velocity.py  pose_vel_covariances.py  rover_geometry.py
src/kalman/src/LIDAR/: lidar_odom.py
src/rover_description/: odom_to_tf.py  package.xml
src/rover_description/config/: default_rover.rviz  robot_elevation_map.yaml
src/rover_description/launch/: display.launch  display_rover.launch  gazebo.launch  nomapgazebo.launch
src/rover_description/urdf/: Rover_URDF_V6.urdf  Rover_URDF_V6.urdf.xacro
src/rover_description/worlds/: mars.world
src/teleop_twist_keyboard/: CMakeLists.txt  teleop_twist_keyboard.py  teleop_twist_keyboard_test.py
src/wheels_control/: CMakeLists.txt  base_stabilizer.py  package.xml  twist_to_wheels.py  twist_to_wheels_test.py  twist_to_wheels_tuning_tests.py  twist_to_wheels_wo_tf.py
src/wheels_control/config/: wheels_control.yaml
src/wheels_control/launch/: wheels_control.launch
(+9 files in other folders)
